fixed service to join and edited some functions

--- a/templates/back/ticket/show.html.twig
+++ b/templates/back/ticket/show.html.twig
@@ -29,7 +29,7 @@
                             {% if ticket.status == 'en_cours' %}
                                 <h1 class="text-body-emphasis">Réponse du support </h1>
                             {% elseif ticket.status == 'en_attente' %}
-                                <h1 class="text-body-emphasis">Contenu du ticket </h1>
+                                <h1 class="text-body-emphasis">Message de votre part </h1>
                             {% elseif ticket.status == 'termine' %}
                                 <h1 class="text-body-emphasis">Cloture du ticket </h1>
                             {% endif %}
