added entity contact, repository, and fixed center with container-fluid

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -43,7 +43,7 @@
 
 	<!-- Introduction -->
 	<section class="section section-lg pt-6">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-8 text-center">
 					<h2 class="h1 font-weight-bolder mb-4">Développeur indépendant</h2>
