--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -36,6 +36,7 @@
 					<li class="menu-item">
 						<a href="{{ url('app_login') }}" class="btn btn-outline-info">Connexion</a>
 					</li>
+					<a href="{{ url('front_contact') }}" class="btn btn-outline-warning">Contact</a>
 				{% endif %}
 				{% if app.user %}
 					<li class="menu-item">
