edited about and contact template

--- a/templates/front/about/index.html.twig
+++ b/templates/front/about/index.html.twig
@@ -6,52 +6,37 @@
 {% block content %}
 
 	<div class="page-title">
-		<h1>A propos</h1>
+		<h1>À propos</h1>
 		<div class="page-subtitle">
-			<h4>Curieux ? Vous êtes au bon endroit !</h4>
+			<h4>Découvrez mon histoire et notre vision.</h4>
 		</div>
 	</div>
-
-	<div id="home_content" class="home-content third-style">
-		<div class="">
-			<div class="row">
-				<div class="col-sm-12 col-md-6 col-lg-6">
-					<div class="inner-content mr-50 mt-5">
-
-						<a href="{{ asset('img/develop.jpg')}}"><img src="{{ asset('img/develop.jpg')}}" alt="Création de site internet pas cher Nevers" class="img-fluid rounded-pill"></a>
-
-					</div>
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-6 mt-5">
-					<div class="inner-content inner-text-block">
-						<div>
-							<section class="about-content rounded-3">
-								<div class="owl-carousel text-rotation">
-									<div class="item">
-										<div class="sp-subtitle">Free lance - développeur</div>
-									</div>
-								</div>
-								<h2 class="hp-main-title">Walid BELBECHE</h2>
-								<p>
-									Grâce à mon expertise en développement Web et à ma connaissance approfondie des nouvelles technologies, je peux vous guider dans votre transformation digitale pour atteindre vos objectifs en ligne. Ensemble, nous pouvons créer un site Web professionnel et attractif qui représente votre entreprise de manière efficace sur Internet. De la conception à la mise en ligne, je m'occupe de toutes les étapes du processus de développement Web. Votre site sera adapté à tous les appareils, optimisé pour les moteurs de recherche et doté des fonctionnalités nécessaires pour attirer et engager vos visiteurs.
-								</p>
-								<p>
-									La sécurité en ligne est une préoccupation majeure pour toute entreprise. Je vous aide à renforcer la sécurité de vos données et de votre site Web en mettant en place des mesures de protection avancées. De la sécurisation des transactions en ligne à la protection contre les cyberattaques, je veille à ce que votre présence en ligne soit sûre et fiable.
-								</p>
-								<p>
-									La gestion de contenu est essentielle pour maintenir votre site Web à jour et fournir à vos utilisateurs des informations pertinentes. Je vous propose des solutions de gestion de contenu faciles à utiliser et personnalisées, vous permettant de mettre à jour votre site en toute simplicité, d'ajouter de nouvelles pages et de partager du contenu attrayant pour votre audience.
-								</p>
-								<p>
-									Enfin, je vous accompagne dans l'analyse des données et la mesure de vos performances en ligne. Grâce à des outils d'analyse puissants, je vous fournis des rapports détaillés sur le trafic de votre site, le comportement de vos utilisateurs et les conversions réalisées. Ces informations précieuses vous aident à prendre des décisions éclairées et à ajuster votre stratégie digitale pour obtenir de meilleurs résultats.
-								</p>
-							</section>
-							<h3 class="text-center">Liens utiles</h3>
-							<div class="d-flex justify-content-center mt-5">
-								<a href="{{ asset('belbeche_walid_cv.pdf')}}" target="_blank" class="btn btn-secondary btn-lg px-4 rounded-pill">Télécharger CV</a>
-								<a href="{{ url('front_contact')}}" target="_self" class="btn btn-primary btn-lg px-4 rounded-pill">Contacter</a>
-							</div>
-						</div>
-					</div>
+	<div class="container">
+		<div class="inner-content inner-text-block">
+			<div>
+				<section class="about-content rounded-3">
+					<div class="sp-subtitle">Chemin d'un développeur</div>
+					<h2 class="hp-main-title">Walid BELBECHE</h2>
+					<p>
+						Mon voyage dans le monde de la programmation a commencé de manière assez ordinaire. J'ai pris des cours, passé des examens, mais quelque chose manquait. C'était lors de mes premières lignes de code pour le web que j'ai ressenti une passion naissante, une étincelle qui a allumé un feu d'ambition et d'innovation.
+					</p>
+					<p>
+						Mon amour pour le développement Web m'a emmené à travailler d'avantage afin d'approfondir mes connaissances dans ce domaine humain, forgeant une expertise forte et une vision unique. Rendant les idées vivantes avec des designs intuitifs et une technologie de pointe.
+					</p>
+					<p>
+						Mais au-delà des codes et des pixels, je crois fermement que chaque projet est une histoire, un rêve en transformation. Je suis là pour guider ce rêve, pour le transformer en réalité, et pour assurer que votre vision brille dans chaque détail.
+					</p>
+					<p>
+						La sécurité en ligne est primordiale à mes yeux. Tout comme un forgeron perfectionne son armure, je veille à protéger chaque site contre les cyber-menaces, garantissant une présence en ligne solide et sécurisée.
+					</p>
+					<p>
+						Votre site web est une entité vivante, évolutive. Avec des outils de gestion de contenu adaptés, je vous donne le pouvoir de le nourrir, le faire grandir et adapter son message au rythme de vos ambitions. Et à chaque étape, je suis là, scrutant les données, analysant le trafic, optimisant l'expérience, et s'assurant que votre histoire se poursuit avec succès.
+					</p>
+				</section>
+				<h3 class="text-center mt-5">Liens utiles</h3>
+				<div class="d-flex justify-content-center">
+					<a href="{{ asset('belbeche_walid_cv.pdf')}}" target="_blank" class="btn btn-secondary btn-lg px-4 rounded-pill">Télécharger CV</a>
+					<a href="{{ url('front_contact')}}" target="_self" class="btn btn-primary btn-lg px-4 rounded-pill">Me contacter</a>
 				</div>
 			</div>
 		</div>
