--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -19,9 +19,9 @@
             <div id="primary" class="content-area">
 
                 <div class="page-title">
-                    <h1>Contact</h1>
+                    <h1>Et si nous discutions ?</h1>
                     <div class="page-subtitle">
-                        <h4>Prendre contact</h4>
+                        <h4>Construisons quelque chose d'exceptionnel ensemble !</h4>
                     </div>
                 </div>
 
@@ -37,7 +37,7 @@
                                         <i class="linecons linecons-phone"></i>
                                     </div>
                                     <div class="ci-text">
-                                        <h4>07 62 97 26 91</h4>
+                                        <a href="tel:0762972691" class="display-4">07 62 97 26 91</a>
                                         <p>Vous pouvez me joindre à ce numéro pour toute demande.</p>
                                     </div>
                                 </div>
@@ -47,8 +47,8 @@
                                         <i class="linecons linecons-location"></i>
                                     </div>
                                     <div class="ci-text">
-                                        <h4>France</h4>
-                                        <p>Basé en France, je suis disponible pour des projets locaux comme internationaux.</p>
+                                        <h4 class="display-4">France</h4>
+                                        <p>Situé dans la Nièvre(58), je suis disponible pour des projets locaux comme nationaux.</p>
                                     </div>
                                 </div>
 
@@ -57,7 +57,7 @@
                                         <i class="linecons linecons-mail"></i>
                                     </div>
                                     <div class="ci-text">
-                                        <h4>wbelbeche.s@gmail.com</h4>
+                                        <a href="mailto:wbelbeche.s@gmail.com" class="display-4">wbelbeche.s@gmail.com</a>
                                         <p>N'hésitez pas à m'envoyer un e-mail pour toute question ou proposition de projet.</p>
                                     </div>
                                 </div>
