edited remove quote from user and contact type + twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
 						<button id="refuse-cookies" class="btn btn-danger mb-3">Je refuse</button>
 						<button id="accept-cookies" class="btn btn-success mb-3">J'accepte</button>
 					</div>
-					<div id="cookie-refused-message" class="position-fixed bg-danger text-center" style="display: none; bottom: 20%; z-index: 99999; left: 0; right: 0;">
+					<div id="cookie-refused-message" class="position-fixed bg-danger text-center" style="display: none; bottom: 0; z-index: 99999; left: 0; right: 0;">
 						<p class="text-white">
 							Vous avez refusé l'utilisation des cookies. Certains fonctionnalités peuvent ne pas fonctionner correctement.
 						</p>
