--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -82,7 +82,7 @@
                                     <div class="right-column">
                                         {{ form_row(form.phone, {'attr': {'class': 'form-control', 'placeholder': 'Téléphone'}}) }}
                                         {{ form_row(form.service) }}
-                                        <input type="submit" class="button btn-send disabled" value="Envoyer le message">
+                                        <input type="submit" class="button btn-send disabled" value="Envoyer la demande">
                                     </div>
                                 </div>
                             </div>
