--- a/templates/front/administrative/conditions.html.twig
+++ b/templates/front/administrative/conditions.html.twig
@@ -10,8 +10,22 @@
 
         <section>
             <h2>Article 1 : L'objet</h2>
-            <p>Les présentes « conditions générales d'utilisation » ont pour objet l'encadrement juridique de l’utilisation du site <a href="https://scriptzenit.fr">scriptzenit.fr</a> et de ses services.</p>
-            <p>Elles sont accessibles sur le site à la rubrique « Conditions Générales d'Utilisation ».</p>
+            <p>
+                Les présentes conditions générales d'utilisation (dites « CGU ») ont pour objet l'encadrement juridique
+                des modalités de mise à disposition du site et des services par <a href="https://scriptzenit.fr">scriptzenit.fr</a> et de définir
+                les conditions d’accès et d’utilisation des services par « l'Utilisateur ».
+
+                Les présentes CGU sont accessibles sur le site à la rubrique «Conditions générales».
+
+                Toute inscription ou utilisation du site implique l'acceptation sans aucune réserve ni restriction des
+                présentes CGU par l’utilisateur. Lors de l'inscription sur le site via le Formulaire d’inscription,
+                chaque utilisateur accepte expressément les présentes CGU en cochant la case précédant le texte suivant :
+                « Je reconnais avoir lu et compris les CGU et je les accepte ».
+                En cas de non-acceptation des CGU stipulées dans le présent contrat, l'Utilisateur se doit de renoncer à
+                l'accès des services proposés par le site.
+                <a href="https://scriptzenit.fr">scriptzenit.fr</a> se réserve le droit de modifier unilatéralement et à
+                tout moment le contenu des présentes CGU.
+            </p>
         </section>
 
         <section>
@@ -36,11 +50,20 @@
 
         <section>
             <h2>ARTICLE 4 : Propriété intellectuelle</h2>
-            <p>Les marques, logos, signes ainsi que tous les contenus du site (textes, images, son…) font l'objet d'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d'auteur.
-                La marque ScriptZenIT est une marque déposée par BELBECHE Walid. Toute représentation et/ou reproduction et/ou exploitation partielle ou totale de cette marque, de quelque nature que ce soit, est totalement prohibée.
-                L'Utilisateur doit solliciter l'autorisation préalable du site pour toute reproduction, publication, copie des différents contenus. Il s'engage à une utilisation des contenus du site dans un cadre strictement privé, toute utilisation à des fins commerciales et publicitaires est strictement interdite.
-                Toute représentation totale ou partielle de ce site par quelque procédé que ce soit, sans l’autorisation expresse de l’exploitant du site Internet constituerait une contrefaçon sanctionnée par l’article L 335-2 et suivants du Code de la propriété intellectuelle.
-                Il est rappelé conformément à l’article L122-5 du Code de propriété intellectuelle que l’Utilisateur qui reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.
+            <p>Les marques, logos, signes ainsi que tous les contenus du site (textes, images, son…) font l'objet
+                d'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d'auteur.
+                La marque ScriptZenIT est une marque déposée par BELBECHE Walid. Toute représentation
+                et/ou reproduction et/ou exploitation partielle ou totale de cette marque, de quelque nature
+                que ce soit, est totalement prohibée.
+                L'Utilisateur doit solliciter l'autorisation préalable du site pour toute reproduction,
+                publication, copie des différents contenus. Il s'engage à une utilisation des contenus du
+                site dans un cadre strictement privé, toute utilisation à des fins commerciales et publicitaires
+                est strictement interdite.
+                Toute représentation totale ou partielle de ce site par quelque procédé que ce soit, sans
+                l’autorisation expresse de l’exploitant du site Internet constituerait une contrefaçon
+                sanctionnée par l’article L 335-2 et suivants du Code de la propriété intellectuelle.
+                Il est rappelé conformément à l’article L122-5 du Code de propriété intellectuelle que
+                l’Utilisateur qui reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.
             </p>
         </section>
 
