--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,10 +5,6 @@
 
 {% block content %}
 
-	{% if error %}
-		<div class="alert alert-danger">{{ error.messageKey }}</div>
-	{% endif %}
-
 	{% if app.user %}
 		<div class="mb-3">
 			Vous êtes connecté en tant que
@@ -43,6 +39,9 @@
 						<label for="floatingPassword">Mot de passe</label>
 					</div>
 					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+					{% if error %}
+						<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
+					{% endif %}
 					<div class="checkbox mb-3">
 						<label>
 							<input type="checkbox" name="_remember_me">
