added password reset + email send + edited home page

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -42,14 +42,13 @@
 	</div>
 
 	<!-- Introduction -->
-	<section class="section section-lg pt-6">
+	<section class="section section-lg">
 		<div class="container-fluid">
 			<div class="row justify-content-center">
-				<div class="col-12 col-md-8 text-center">
+				<div class="col-12 col-md-8 justify-content-center">
 					<h2 class="h1 font-weight-bolder mb-4">Développeur indépendant</h2>
 					<div
 							class="justify-content-center">
-						<!-- Ajout de la classe d-flex justify-content-center -->
 						<img src="{{ asset('img/logo.png')}}" alt="Agence web à Nevers(58)">
 					</div>
 					<p class="lead">Grâce à mon expertise en développement Web, je vous aide à créer un site professionnel et attractif, adapté à tous les appareils. La sécurité des données est une priorité, et je propose des solutions de gestion de contenu faciles à utiliser.</p>
