--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
 				<div class="flex items-center justify-between forgot-password mb-3">
 					<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
 					<div class="text-sm">
-						<a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
+						<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
 					</div>
 				</div>
 				<div class="register">
