--- a/templates/security/email.html.twig
+++ b/templates/security/email.html.twig
@@ -57,7 +57,7 @@
                                                 <td style="overflow-wrap:break-word;word-break:break-word;padding:20px;font-family:'Lato',sans-serif;" align="left">
 
                                                     <div style="color: #ffffff; line-height: 130%; text-align: center; word-wrap: break-word;">
-                                                        <p style="line-height: 130%;">Ticket crée</p>
+                                                        <p style="line-height: 130%;">Bienvenue {{ civility }}. {{ nom }} {{ prenom }}</p>
                                                     </div>
 
                                                 </td>
@@ -116,28 +116,21 @@
                                                 <td style="overflow-wrap:break-word;word-break:break-word;padding:25px 20px 5px;font-family:'Lato',sans-serif;" align="left">
 
                                                     <div style="color: #fff200; line-height: 120%; text-align: left; word-wrap: break-word;">
-                                                        <p style="font-size: 14px; line-height: 120%;">RECAPITULATIF TICKET
+                                                        <p style="font-size: 14px; line-height: 120%;">Inscription prise en compte
                                                         </p>
                                                     </div>
 
                                                     <p style="color:white;">
 
-                                                        Votre adresse email :
-                                                        {{ email_address }}
-
+                                                        Adresse email :
+                                                        {{ email_address }},
                                                         <br>
 
-                                                        Vous souhaitez réaliser :
-                                                        {{ subject }}
-                                                        <br>
-
-                                                        Votre demande est :
-                                                        {{ message|raw }}
-                                                        <br>
-
-                                                        Le status de votre demande est :
-                                                        {{ status }}
-                                                        <br>
+                                                        Votre mot de passe(crypté) :
+                                                        {{ password }}
+                                                    <br>
+                                                        <p style="color:white;">Vous avez oublié votre mot de passe ? Pas de souci, ça arrive même aux meilleurs d'entre nous ! Suivez simplement ce lien pour le réinitialiser
+                                                        <a href="{{ url('request_reset_password') }}">Je réinitialise mon mot de passe</a></p>
                                                     </p>
                                                 </td>
                                             </tr>
@@ -227,11 +220,11 @@
 
                                                     <div style="line-height: 120%; text-align: left; word-wrap: break-word;">
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez créer un ticket d'assistance.</span>
+                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez de vous inscrire sur la plateforme ScriptZenIT.</span>
                                                         </div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
+                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Pour demander assistance, rendez-vous sur l'onglet <a href="{{ url('front_assistance') }}" class="text-white">Assistance</a>
 																	</span>
                                                         </div>
                                                     </div>
