--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -16,7 +16,11 @@
 					<li>Pour réaliser une demande de devis, rendez-vous sur l'onglet <a href="{{ url('front_devis_new') }}" class="text-white">Inscription</a></li>
 				</ul>
 			</div>
-			<button type="button" class="btn-close ml-auto" data-bs-dismiss="alert" aria-label="Compris">Ok, compris</button>
+			<button type="button" class="ml-auto" data-bs-dismiss="alert" aria-label="fermer">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+					<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+				</svg>
+			</button>
 		</div>
 	{% else %}
 		<div class="alert alert-primary d-flex align-items-center" role="alert">
@@ -29,7 +33,11 @@
 					<li>Pour demander assistance, rendez-vous sur l'onglet <a href="{{ url('front_assistance') }}" class="text-white">Assistance</a></li>
 				</ul>
 			</div>
-			<button type="button" class="btn-close ml-auto" data-bs-dismiss="alert" aria-label="Compris">Ok, compris</button>
+			<button type="button" class="ml-auto" data-bs-dismiss="alert" aria-label="fermer">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+					<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+				</svg>
+			</button>
 		</div>
 	{% endif %}
 
@@ -402,8 +410,8 @@
 						</div>
 
 						<div class="fw-default-row">Vous souhaitez aller un peu plus loin et vous avez en tête des
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            fonctionnalités bien précises pour votre nouveau site internet ? Tout est possible
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																			                            techniquement, discutons ensemble de votre développement web sur mesure !
+							fonctionnalités bien précises pour votre nouveau site internet ? Tout est possible
+							techniquement, discutons ensemble de votre développement web sur mesure !
 						</div>
 					</div>
 				</div>
