--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,8 +25,8 @@
 			<div class="col-md-10 mx-auto col-lg-5">
 				<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
 					<div class="form-group mb-3">
-						<label for="floatingInput">Email adresse</label>
-						<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="l'adresse saisie pour l'inscription" name="email">
+						<label for="floatingInput">E-mail</label>
+						<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="L'adresse saisie pour l'inscription" name="email">
 					</div>
 					<div class="form-group mb-3">
 						<label for="floatingPassword">Mot de passe</label>
