edited li request password

--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -8,10 +8,10 @@
 
         <p>Vous avez oublié votre mot de passe ? Pas de souci, ça arrive même aux meilleurs d'entre nous ! Suivez simplement ces étapes pour le réinitialiser :</p>
 
-        <ol>
-            <li><strong>Saisissez votre e-mail :</strong> Assurez-vous d'entrer l'adresse e-mail que vous utilisez pour ce site.</li>
-            <li><strong>Vérifiez votre boîte de réception :</strong> Après avoir soumis votre e-mail, recherchez un message de notre part avec un lien de réinitialisation. Si vous ne le voyez pas tout de suite, jetez un œil dans votre dossier de spam.</li>
-            <li><strong>Cliquez sur le lien :</strong> Suivez les instructions pour créer un nouveau mot de passe sécurisé.</li>
+        <ol style="list-style-type: lower-alpha">
+            <li style="list-style-type: auto;"><strong>Saisissez votre e-mail :</strong> Assurez-vous d'entrer l'adresse e-mail que vous utilisez pour ce site.</li>
+            <li style="list-style-type: auto;"><strong>Vérifiez votre boîte de réception :</strong> Après avoir soumis votre e-mail, recherchez un message de notre part avec un lien de réinitialisation. Si vous ne le voyez pas tout de suite, jetez un œil dans votre dossier de spam.</li>
+            <li style="list-style-type: auto;"><strong>Cliquez sur le lien :</strong> Suivez les instructions pour créer un nouveau mot de passe sécurisé.</li>
         </ol>
 
         <form method="post">
