--- a/templates/front/ticket/email.html.twig
+++ b/templates/front/ticket/email.html.twig
@@ -227,7 +227,7 @@
 
                                                     <div style="line-height: 120%; text-align: left; word-wrap: break-word;">
                                                         <div style="font-family: arial, helvetica, sans-serif;">
-                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez créer un ticket d'assistance.</span>
+                                                            <span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez de créer un ticket d'assistance.</span>
                                                         </div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
                                                         <div style="font-family: arial, helvetica, sans-serif;">
