added management of category from back to front and edited project show

--- a/templates/back/includes/_project_form.html.twig
+++ b/templates/back/includes/_project_form.html.twig
@@ -5,6 +5,7 @@
 {{ form_row(projectForm.images) }}
 {{ form_row(projectForm.categories) }}
 {{ form_row(projectForm.link) }}
+{{ form_row(projectForm.category) }}
 
 <button type="submit" class="btn btn-primary">Enregistrer</button>
 
