fixed some issues

--- a/templates/back/includes/_project_form.html.twig
+++ b/templates/back/includes/_project_form.html.twig
@@ -1,11 +1,11 @@
 {{ form_start(projectForm) }}
 
-{{ form_row(projectForm.title) }}
-{{ form_row(projectForm.description) }}
-{{ form_row(projectForm.images) }}
-{{ form_row(projectForm.categories) }}
-{{ form_row(projectForm.link) }}
-{{ form_row(projectForm.category) }}
+{{ form_widget(projectForm.title) }}
+{{ form_widget(projectForm.description) }}
+{{ form_widget(projectForm.images) }}
+{{ form_widget(projectForm.categories) }}
+{{ form_widget(projectForm.link) }}
+{{ form_widget(projectForm.category) }}
 
 <button type="submit" class="btn btn-primary">Enregistrer</button>
 
