--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -19,7 +19,7 @@
 					</a>
 				</div>
 				<div class="nav-item ajax-page-close-button">
-					<a id="ajax-page-close-button" href="{{ url('front_project')}}">
+					<a id="close-button" href="{{ url('front_project')}}">
 						<i class="lnr lnr-cross"></i>
 					</a>
 				</div>
