--- a/templates/back/index/index.html.twig
+++ b/templates/back/index/index.html.twig
@@ -5,5 +5,8 @@
 {% block content %}
 
     <h1>Page administration principal</h1>
+    <div class="justify-content-center">
+        <a href="{{ url('front_home') }}">Retour à la page d'accueil</a>
+    </div>
 
 {% endblock %}
