--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -16,15 +16,24 @@
 			</p>
 
 			<p class="lead">
-				Remplissez le formulaire ci-dessous pour détailler vos besoins. Une fois votre demande de devis soumise, vous pourrez suivre son avancement en temps réel grâce à notre onglet <a href="{{ path('front_assistance') }}">Assistance</a>. Je suis là pour vous accompagner à chaque étape.
+				Remplissez le formulaire ci-dessous pour détailler vos besoins. Une fois votre demande de devis soumise,
+				vous pourrez suivre son avancement en temps réel grâce à notre onglet <a href="{{ path('front_assistance') }}">Assistance</a>.
+				Je suis là pour vous accompagner à chaque étape.
 			</p>
+			{% if not app.user %}
+				<p class="lead">Deux possibilités s'offrent à vous, soit vous vous connecter, et dans ces cas vous aurez un suivi à votre demande</p>
+				<a href="{{ url('app_register') }}" class="btn btn-success">Cliquez ici pour vous inscrire</a>
+				<p class="lead">Soit vous créer votre demande, et vous complèterez vos informations plus tard</p>
+			{% endif %}
 		</div>
-		{% if app.user %}
 			<div class="px-4">
 				<div
 						class="col-lg-12 mx-auto padding-top-xxl">
 					<!-- Formulaire de devis -->
 					{{ form_start(formDevis) }}
+					<label for="">L'adresse email pour recevoir votre devis</label>
+					{{ form_row(formDevis.email) }}
+					{{ form_errors(formDevis.email) }}
 					<label for="">Type d'application souhaité</label>
 					{{ form_row(formDevis.type_de_site_web)}}
 					{{ form_errors(formDevis.type_de_site_web)}}
@@ -39,9 +48,5 @@
 				</div>
 			</div>
 			{{ form_end(formDevis) }}
-		{% else %}
-			<p>Vous n'êtes pas connecté, veuillez fournir votre adresse email pour soumettre un devis :</p>
-			<a href="{{ url('app_register') }}" class="btn btn-success">Cliquez ici pour vous inscrire</a>
-		{% endif %}
 	</div>
 {% endblock %}
